force-app/main/default/objects/GFA_Proctoring__x/GFA_Proctoring__x.object-meta.xml
<CustomObject>
    <description>Supplies data from Ed Plus org on the Contact page section "EdPlus Salesforce - Earned Admissions"</description>
    <externalDataSource>EdPlusCrossOrg</externalDataSource>
    <externalName>GFA_Proctoring__c</externalName>
    <label>GFA Proctoring (EdPlus)</label>
    <pluralLabel>GFA Proctoring (EdPlus)</pluralLabel>
</CustomObject>