force-app/main/default/objects/GFA_Proctoring__x/fields/Allowed_Time_Limit_Mins__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Time_Limit_Mins__c</fullName>
    <externalDeveloperName>Allowed_Time_Limit_Mins__c</externalDeveloperName>
    <label>Allowed Time Limit Mins</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>