force-app/main/default/objects/GFA_Proctoring__x/fields/Attempt_Code__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Code__c</fullName>
    <externalDeveloperName>Attempt_Code__c</externalDeveloperName>
    <label>Attempt Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>