force-app/main/default/objects/GFA_Proctoring__x/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <externalDeveloperName>Completed_At__c</externalDeveloperName>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>