force-app/main/default/objects/GFA_Proctoring__x/fields/Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrollment__c</fullName>
    <externalDeveloperName>Course_Enrollment__c</externalDeveloperName>
    <label>Course Enrollment</label>
    <length>18</length>
    <referenceTo>hed_Course_Enrollment__x</referenceTo>
    <relationshipLabel>GFA Proctoring</relationshipLabel>
    <relationshipName>GFA_Proctoring</relationshipName>
    <type>ExternalLookup</type>
</CustomField>