force-app/main/default/objects/GFA_Proctoring__x/fields/Course_Offering_Id__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering_Id__c</fullName>
    <externalDeveloperName>Course_Offering_Id__c</externalDeveloperName>
    <label>Course Offering Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>