force-app/main/default/objects/GFA_Proctoring__x/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <externalDeveloperName>CreatedById</externalDeveloperName>
    <label>Created By ID</label>
    <length>18</length>
    <referenceTo>EdPlusUser__x</referenceTo>
    <relationshipLabel>GFA Proctoring</relationshipLabel>
    <relationshipName>GFA_Proctoring</relationshipName>
    <type>ExternalLookup</type>
</CustomField>