force-app/main/default/objects/GFA_Proctoring__x/fields/Exam_Name__c.field-meta.xml
<CustomField>
    <fullName>Exam_Name__c</fullName>
    <externalDeveloperName>Exam_Name__c</externalDeveloperName>
    <label>Exam Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>