force-app/main/default/objects/GFA_Proctoring__x/fields/Is_Sample_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Is_Sample_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Is_Sample_Attempt__c</externalDeveloperName>
    <label>Is Sample Attempt</label>
    <type>Checkbox</type>
</CustomField>