force-app/main/default/objects/GFA_Proctoring__x/fields/Last_Poll_IPAddr__c.field-meta.xml
<CustomField>
    <fullName>Last_Poll_IPAddr__c</fullName>
    <externalDeveloperName>Last_Poll_IPAddr__c</externalDeveloperName>
    <label>Last Poll Ipaddr</label>
    <length>15</length>
    <type>Text</type>
</CustomField>