force-app/main/default/objects/GFA_Proctoring__x/fields/Last_Poll_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Poll_Timestamp__c</fullName>
    <externalDeveloperName>Last_Poll_Timestamp__c</externalDeveloperName>
    <label>Last Poll Timestamp</label>
    <type>DateTime</type>
</CustomField>