force-app/main/default/objects/GFA_Proctoring__x/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <externalDeveloperName>LastModifiedById</externalDeveloperName>
    <label>Last Modified By ID</label>
    <length>18</length>
    <referenceTo>EdPlusUser__x</referenceTo>
    <relationshipLabel>GFA Proctoring</relationshipLabel>
    <relationshipName>GFA_Proctoring1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>