force-app/main/default/objects/GFA_Proctoring__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>GFA Proctoring ID</label>
    <length>80</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>