force-app/main/default/objects/GFA_Proctoring__x/fields/OpenEdX_Proctoring_Id__c.field-meta.xml
<CustomField>
    <fullName>OpenEdX_Proctoring_Id__c</fullName>
    <externalDeveloperName>OpenEdX_Proctoring_Id__c</externalDeveloperName>
    <label>OpenEdX Proctoring Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>