force-app/main/default/objects/GFA_Proctoring__x/fields/Review_Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>Review_Policy_Id__c</fullName>
    <externalDeveloperName>Review_Policy_Id__c</externalDeveloperName>
    <label>Review Policy Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>