force-app/main/default/objects/GFA_Proctoring__x/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <externalDeveloperName>Started_At__c</externalDeveloperName>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>