force-app/main/default/objects/GFA_Proctoring__x/fields/Taking_As_Proctored__c.field-meta.xml
<CustomField>
    <fullName>Taking_As_Proctored__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Taking_As_Proctored__c</externalDeveloperName>
    <label>Taking As Proctored</label>
    <type>Checkbox</type>
</CustomField>